# sicp_challenge

./: .gitignore  README.md  binary_tree  cc.py  coin_graph.py  graph.py  p112.rkt  p113.rkt  p120.rkt  p124.rkt  pascal_triangle.rkt  plactice1_11.rkt  plactice1_16.rkt  plactice1_17.rkt  plactice1_17_stepcount.py  plactice1_17_stepcount_example.py  plactice1_29.rkt  plactice1_8.rkt  plactice2_17.rkt  plactice2_20.rkt  plactice2_3.rkt  plactice2_30.rkt  plactice_grahp.py
01/: ex_1_11.rkt  ex_1_11_test.rkt  ex_1_12.rkt  ex_1_12_test.rkt  ex_1_16.rkt  ex_1_16_test.rkt  ex_1_17.rkt  ex_1_17_test.rkt  ex_1_19.rkt  ex_1_19_test.rkt  ex_1_22.rkt  ex_1_29.rkt  ex_1_3.rkt  ex_1_30.rkt  ex_1_35.rkt  ex_1_43.rkt  ex_1_44.rkt  ex_1_45.rkt  ex_1_45_nishizawa.rkt  ex_1_46.rkt  ex_1_8.rkt  ex_1_8_test.rkt  smallest-divisor.rkt  testing.rkt
02/: ex_2_1.rkt  ex_2_17.rkt  ex_2_18.rkt  ex_2_19.rkt  ex_2_2.rkt  ex_2_20.rkt  ex_2_21.rkt  ex_2_22.rkt  ex_2_23.rkt  ex_2_25.rkt  ex_2_26.rkt  ex_2_30.rkt  ex_2_31.rkt  ex_2_32.rkt  ex_2_33.rkt  ex_2_34.rkt  ex_2_35.rkt  ex_2_4.rkt  ex_2_40.rkt  ex_2_41.rkt  ex_2_42.rkt  ex_2_44.rkt  ex_2_45.rkt  ex_2_46.rkt  ex_2_47.rkt  ex_2_5.rkt  ex_2_6.rkt  gcd.rkt  p117.rkt  p124.rkt
past_challenge/: ackermann_f.rkt  binary_tree  cc.py  coin_graph.py  p62.rkt  plactice1_1.rkt  plactice1_15.rkt  plactice1_18_fail.rkt  plactice1_19.rkt  plactice1_20.rkt  plactice1_3.rkt  plactice2_1.rkt  plactice2_18.rkt  plactice2_21.rkt  plactice2_23.rkt  plactice2_31.rkt  plactice2_5.rkt
python/: Makefile  coin_change_graph.py  pyproject.toml
tools/test/: README.md  (+2 more)
